Closed Bug 1715953 Opened 3 years ago Closed 3 years ago

Rendering is broken with sw-wr and disabling GPU process on Win10

Categories

(Core :: Graphics: WebRender, defect)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
thunderbird_esr78 --- unaffected
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- fixed
firefox91 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Found a problem during looking into Bug 1714838.

Blocks: 1714838
Assignee: nobody → sotaro.ikeda.g
Summary: Rendering is broken with sw-wr and disabling GPU process. → Rendering is broken with sw-wr and disabling GPU process on Win10
OS: Unspecified → Windows 10
Attachment #9226759 - Attachment description: Bug 1715953 - Add flush DrawTarget → WIP: Bug 1715953 - Add flush DrawTarget
Attachment #9226759 - Attachment description: WIP: Bug 1715953 - Add flush DrawTarget → Bug 1715953 - Add flush DrawTarget

Is this a regression? Can you check if it was working in earlier versions?

Flags: needinfo?(sotaro.ikeda.g)
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/49f374ded227
Add flush DrawTarget r=lsalzman,gfx-reviewers

(In reply to Jeff Muizelaar [:jrmuizel] from comment #3)

Is this a regression? Can you check if it was working in earlier versions?

Sometimes the bug could not happen then I tried the following several times. Then Bug 739096 seems to trigger the problem.

./mach mozregression --good 2021-04-12 --bad 2021-05-01 --pref gfx.webrender.software:true gfx.webrender.software.d3d11:false layers.gpu-process.enabled:false -a about:support


2:33.81 INFO: No more integration revisions, bisection finished.
2:33.81 INFO: Last good revision: d735e197d708d85d9b7e7cb1ea3609bdc4f27bd6
2:33.81 INFO: First bad revision: 7387be4b195f3f266410d8faafbaf80f8176e293
2:33.81 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d735e197d708d85d9b7e7cb1ea3609bdc4f27bd6&tochange=7387be4b195f3f266410d8faafbaf80f8176e293

Flags: needinfo?(sotaro.ikeda.g)
Regressed by: 739096
Has Regression Range: --- → yes

I confirmed the problem on beta(90).

Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

Please request uplift when you get a chance.

Flags: needinfo?(sotaro.ikeda.g)

Comment on attachment 9226759 [details]
Bug 1715953 - Add flush DrawTarget

Beta/Release Uplift Approval Request

  • User impact if declined: Rendering is broken on Windows when Software WebRender without D3D(RenderTextureHostSWGL) is used.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change just added flush DrawTarget.
  • String changes made/needed: none
Flags: needinfo?(sotaro.ikeda.g)
Attachment #9226759 - Flags: approval-mozilla-beta?

Comment on attachment 9226759 [details]
Bug 1715953 - Add flush DrawTarget

approved for 90.0b9

Attachment #9226759 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
See Also: → 1716170
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: