Bug 1715953 - Add flush DrawTarget. r=lsalzman,gfx-reviewers, a=jcristau

Needs to call flush DrawTarget to apply pending updates.

Differential Revision: https://phabricator.services.mozilla.com/D117628